@@ -1,3 +1,7 @@
+Sat May  6 14:48:24 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>
+
+ - newhidups: added string conversions to Tripplite subdriver
+
 Sat May  6 14:28:01 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>
 
  - newhidups: enabled experimental Tripplite subdriver
